frontend/react-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend-deployment
  labels:
    app: react-frontend
spec: 
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template: 
    metadata:
      labels:
        app: react-frontend
    spec: 
      containers:
        - name: react-frontnend
          image: indura08/flask-react-application:react-frontend
          ports:
            - containerPort: 5173
