frontend/react-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend-service
spec:
  selector: 
    app: react-frontend
  ports: 
    - protocol: TCP
      port: 5173
      targetPort: 5173
  type: ClusterIP   #danata cluster ip demu within cluster withrk access krnna puluwan wenna 
    
    #meke error ekk enwa , flask-backend-service:5000 kiyla daanna one react eke fetch api walt e rror eka heta hdnna
