frontend/react-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: contact.lk
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend: 
          service:
            name: flask-backend-service
            port: 
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-frontend-service
            port:
              number: 5173
